# aphasia-modeling

./: .gitignore  CLAUDE.md  main.py  playground.ipynb  pyproject.toml
docs/: paraphasia_detection_plan.md
notebooks/: train_colab.ipynb
results/sanity/: metrics.json  predictions.json
scripts/: evaluate_model.py  train.py
src/aphasia_modeling/data/: __init__.py  chat_parser.py  dataset.py  preprocess.py
src/aphasia_modeling/evaluation/: __init__.py  alignment.py  metrics.py  significance.py
src/aphasia_modeling/model/: __init__.py  classifier.py  collator.py  inference.py  tokenizer.py  trainer.py  whisper.py
tests/: test_alignment.py  test_dataset.py  test_metrics.py  test_model.py  test_preprocess.py
