[project]
name = "aphasia-modeling"
version = "0.1.0"
description = "Joint ASR and multiclass paraphasia detection from aphasic speech using Whisper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0",
    "transformers>=4.36",
    "datasets>=2.14",
    "librosa>=0.10",
    "soundfile>=0.12",
    "jiwer>=3.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "tqdm>=4.65",
    "pylangacq>=0.18",
    "ipykernel>=7.2.0",
    "accelerate>=1.13.0",
    "wandb>=0.25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aphasia_modeling"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
